--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,15 @@
 # not from template #########################################
 
+# diffusers
+/src/diffusers/dataset/
+
 # examples
 src/examples/data/
 src/examples/dataset/
 
-# malefemale
-src/malefemale/data/
-src/malefemale/dataset/
+# genderclassification
+src/genderclassification/data/
+src/datasets/malefemale/
 
 # from template #############################################
 # Byte-compiled / optimized / DLL files
@@ -169,3 +172,4 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+
